fix overflow on requestsview + minimum size

--- a/manager/src/index.css
+++ b/manager/src/index.css
@@ -11,6 +11,7 @@ body,
     height: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
+    margin-bottom: 1;
 }
 
 .ibm-plex-serif-thin {
